Fixed some typos

--- a/slides.tex
+++ b/slides.tex
@@ -63,7 +63,7 @@
 	Models of disease transmission:
 	\begin{itemize}
 		\item Interpretability: phenomenological, \alert{mechanistic}
-		\item Scale: \alert{population-based}, agent-based,
+		\item Scale: \alert{population-based}, agent-based
 		\item Framework: \alert{deterministic}, stochastic
 		\item Data-generating mechanisms: incubation, contagion, immunity, vaccination, mobility...
 	\end{itemize}
