Started adapting slides

--- a/slides.tex
+++ b/slides.tex
@@ -33,8 +33,8 @@
 
 % define title page
 \title{Bayesian workflow for disease transmission modeling in Stan}
-\author{Julien Riou, MD PhD}
-\date{ Advanced statistical methods for physicists\\ 28 May 2021}
+\author{Léo Grinsztajn, Charles Margossian, Julien Riou, Elizaveta Semenova}
+\date{ Berlin Bayesians Meetup\\ 7 December 2021}
 \institute{}
 
 % begin document
