changeing rho to gamma

--- a/slides.tex
+++ b/slides.tex
@@ -212,7 +212,7 @@
 	\pause
 	\begin{itemize}
 		\item set (fixed) values for parameters:	
-		$\beta=0.8$; $\rho=1/7$
+		$\beta=0.8$; $\gamma=1/7$
 	\end{itemize}
 	\begin{figure}
 		\centering
@@ -256,7 +256,7 @@ $$
 	\begin{figure}
 		\centering
 		\only<1>{
-			with $\beta=0.8$; $\rho=1/7$; $S_0=100000-50$; $I_0=50$ and $R_0=0$ \\ \bigskip
+			with $\beta=0.8$; $\gamma=1/7$; $S_0=100000-50$; $I_0=50$ and $R_0=0$ \\ \bigskip
 			\includegraphics[width=0.7\linewidth]{simple_sir/example_sir1.pdf}
 		}
 		\only<2>{
@@ -308,7 +308,7 @@ $$
 	\end{itemize}
 	
 	\pause\vspace{2em}
-	$\rightarrow$ all these uses are based on \alert{numerical values} for $\beta$, $\rho$ and the initial conditions and their \alert{uncertainty}
+	$\rightarrow$ all these uses are based on \alert{numerical values} for $\beta$, $\gamma$ and the initial conditions and their \alert{uncertainty}
 }
 
 \frame{
